# LLMOps-Project

./: .gitignore  Agentic_AI.txt  pyproject.toml  requirements.txt
multi_doc_chat/config/: config.yaml
multi_doc_chat/logger/: custom_logger.py
multi_doc_chat/utils/: config_loader.py  model_loader.py
notebook/: RAG_experiment.ipynb  experiment.ipynb  experiments.ipynb
