[project]
name = "llmops-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.0",
    "google-genai>=1.52.0",
    "ipykernel>=7.1.0",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.2.0",
    "langsmith>=0.4.49",
    "numpy>=2.3.5",
    "openai>=2.8.1",
    "python-dotenv>=1.2.1",
    "rapidocr-onnxruntime>=1.4.4",
    "structlog>=25.5.0",
    "tiktoken>=0.12.0",
]
